--- a/mp03/codelab5/index.html
+++ b/mp03/codelab5/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <meta name="theme-color" content="#4F7DC9">
   <meta charset="UTF-8">
-  <title>AppInventor</title>
+  <title>Block programming</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://storage.googleapis.com/codelab-elements/codelab-elements.css">
@@ -23,14 +23,15 @@
   <google-codelab-analytics gaid="UA-49880327-14"></google-codelab-analytics>
   <google-codelab codelab-gaid=""
                   id="mp03/codelab5"
-                  title="AppInventor"
+                  title="Block programming"
                   environment="web"
                   feedback-link="https://github.com/gerardfp">
     
       <google-codelab-step label="Introducció" duration="0">
-        <p class="image-container"><img style="width: 220.00px" src="img\f470a69726c01edf.png"></p>
-<p>L&#39;objectiu d&#39;aquest CodeLab és conèixer les possibilitats de la classe Scanner per a llegir dades d&#39;entrada des d&#39;un fitxer.</p>
-<p>En molts casos, quan provem un programa, ens veiem obligat a introduir per teclat una vegada i una altra les mateixes dades. Això ralenteix el nostre treball. En aquest CodeLab veurem com posar aquestes dades en un fitxer i llegir-les directament.</p>
+        <p class="image-container"><img style="width: 273.00px" src="img\9f1b6edb09d63d08.png"></p>
+<p>L&#39;objectiu d&#39;aquest CodeLab és conèixer les possibilitats de la programació visual basada en blocks per a descriure algorismes.</p>
+<p>La programació estructurada es basa en les estructures de Seqüència, Selecció, Iteració i Recursió de blocs de sentències. Aquestes estructures i blocs es poden representar en diversos formats. El més habitual és el textual, amb els llenguatges de programació, però també es possible descriure&#39;ls mitjançant la composició de blocks, de forma semblant a un puzzle.</p>
+<p>En aquest CodeLab desenvoluparem un petit joc, l&#39;SpaceInvaders, utilitzant la plataforma de desenvolupament d&#39;aplicacións mòbils AppInventor, creada al MIT (Massachussetts Institute of Technology).</p>
 
 
       </google-codelab-step>
