--- a/mp03/codelab2/index.html
+++ b/mp03/codelab2/index.html
@@ -28,7 +28,7 @@
                   feedback-link="https://github.com/gerardfp">
     
       <google-codelab-step label="Introducció" duration="0">
-        <p>L&#39;objectiu d&#39;aquest CodeLab és la iniciació a l&#39;ús de formularis en interfícies gràfiques.</p>
+        <p>L&#39;objectiu d&#39;aquest CodeLab és practicar les operacions booleanes i la conversió de tipus.</p>
 <p>Realitzarem una Calculadora d&#39;operacions lògiques binaries.</p>
 <p class="image-container"><img style="width: 264.00px" src="img\5bb76568a1678271.png"></p>
 
@@ -37,9 +37,9 @@
     
       <google-codelab-step label="Crea el projecte" duration="0">
         <p>Inicia IntelliJ i crea un nou projecte anomenat &#34;Calculadora&#34;.</p>
-<p class="image-container"><img style="width: 548.00px" src="img\1f77c27e0b506e0f.png"></p>
-<p class="image-container"><img style="width: 548.00px" src="img\8556ac2bd86adfea.png"></p>
-<p class="image-container"><img style="width: 550.00px" src="img\821e9c109875504b.png"></p>
+<p class="image-container"><img style="width: 566.00px" src="img\69998c3462f22edc.png"></p>
+<p class="image-container"><img style="width: 566.00px" src="img\a979a613157cd3d.png"></p>
+<p class="image-container"><img style="width: 566.00px" src="img\a67d982e68ca48d7.png"></p>
 
 
       </google-codelab-step>
