--- a/mp03/codelab10/index.html
+++ b/mp03/codelab10/index.html
@@ -28,7 +28,7 @@
                   feedback-link="https://github.com/gerardfp">
     
       <google-codelab-step label="Introducció" duration="0">
-        <p>Kotlin és un llenguatge 100% compatible amb el JDK que proporciona una sintaxi més concisa i expressiva.</p>
+        <p>Kotlin és un llenguatge 100% compatible que proporciona una sintaxi més concisa i expressiva.</p>
 <p>Un dels camps en els quals més s&#39;utilitza Kotlin és per al desenvolupament d&#39;apliacions Android.</p>
 <p>En aquest CodeLab veurem un petita iniciació al llenguatge Kotlin, fent una comparació amb Java.</p>
 
