--- a/mp03/codelab10/index.html
+++ b/mp03/codelab10/index.html
@@ -28,7 +28,7 @@
                   feedback-link="https://github.com/gerardfp">
     
       <google-codelab-step label="Introducció" duration="0">
-        <p>Kotlin és un llenguatge 100% compatible que proporciona una sintaxi més concisa i expressiva.</p>
+        <p>Kotlin és un llenguatge 100% compatible amb el JDK que proporciona una sintaxi més concisa i expressiva.</p>
 <p>Un dels camps en els quals més s&#39;utilitza Kotlin és per al desenvolupament d&#39;apliacions Android.</p>
 <p>En aquest CodeLab veurem un petita iniciació al llenguatge Kotlin, fent una comparació amb Java.</p>
 
@@ -48,16 +48,18 @@
 </td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\39cc399917f833bc.jpeg"></p>
 </td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\bfc092291325566c.jpeg"></p>
 </td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\bd6c3f897cc1dddf.jpeg"></p>
-</td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\f80310f2051d02ea.jpeg"></p>
-</td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\28aa52d0bb93fa84.jpeg"></p>
-</td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\5701ca7301e4f9d4.jpeg"></p>
-</td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\cf7eb6a33b0f520a.jpeg"></p>
 </td></tr>
 <tr><td colspan="1" rowspan="1"><p><code>cam.jpg</code></p>
 </td><td colspan="1" rowspan="1"><p><code>console.jpg</code></p>
 </td><td colspan="1" rowspan="1"><p><code>cpu.jpg</code></p>
 </td><td colspan="1" rowspan="1"><p><code>hdd.jpg</code></p>
-</td><td colspan="1" rowspan="1"><p><code>laptop.jpg</code></p>
+</td></tr>
+<tr><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\f80310f2051d02ea.jpeg"></p>
+</td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\28aa52d0bb93fa84.jpeg"></p>
+</td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\5701ca7301e4f9d4.jpeg"></p>
+</td><td colspan="1" rowspan="1"><p class="image-container"><img style="width: 78.00px" src="img\cf7eb6a33b0f520a.jpeg"></p>
+</td></tr>
+<tr><td colspan="1" rowspan="1"><p><code>laptop.jpg</code></p>
 </td><td colspan="1" rowspan="1"><p><code>pendrive.jpg</code></p>
 </td><td colspan="1" rowspan="1"><p><code>printer.jpg</code></p>
 </td><td colspan="1" rowspan="1"><p><code>sdcard.jpg</code></p>
@@ -69,7 +71,7 @@
     
       <google-codelab-step label="AddGenerator" duration="0">
         <p>Una botiga d&#39;informàtica vol dur a terme una campanya de màrqueting online basada en descomptes dels seus productes. Han realitzat un disseny gràfic dels anuncis per a mostrar-los en una plataforma de publicitat online.</p>
-<p>Aquest és un model de l&#39;anunci que han dissenyat:</p>
+<p>Aquest és el model de l&#39;anunci que han dissenyat:</p>
 <p class="image-container"><img style="width: 308.00px" src="img\c45c8c62cd689623.png"></p>
 <p>A l&#39;anunci apareixen:</p>
 <ul>
@@ -142,7 +144,8 @@
 <p>Per a que el codi SVG s&#39;emmagatzemi en un arxiu en lloc de que es mostri per la consola tenim moltes opcions. Una molt ràpida és redirigir la sortida de la consola a un arxiu usant una eina de l&#39;IDE.</p>
 <p>Per a redirigir la sortida de la consola a un arxiu, ves a <code>Run</code> &gt; <code>Edit configurations</code>. A la pestanya <code>Logs</code> trobaràs l&#39;opció <code>Save console output to file</code>, marca-la i especifica el fitxer de sortida <code>adds.html</code>.</p>
 <p class="image-container"><img style="width: 736.40px" src="img\5589b42747bc3561.png"></p>
-<p>Usarem el format HTML ja que així en sol document HTML podrem afegir diverses imatges SVG.</p>
+<aside class="special"><p>Usem el format HTML, ja que així en un sol document HTML podem afegir diverses imatges SVG.</p>
+</aside>
 <p>Comprova que a l&#39;executar l&#39;aplicació es genera el fitxer <code>adds.html</code>. Obre&#39;l amb el navegador web i comprova que es mostra la imatge SVG correctament.</p>
 <p class="image-container"><img style="width: 458.00px" src="img\a224e0d6202d356d.png"></p>
 <p>Prova a canviar els valors de les variables, torna a executar el programa i recarrega (<code>F5</code>) la web al navegador.</p>
@@ -223,7 +226,7 @@
 }</code></pre>
 <p>I així obtenim aquest resultat:</p>
 <p class="image-container"><img style="width: 736.40px" src="img\4b242d21a573983a.png"></p>
-<p>Fixa&#39;t que el que estem fent al codi anterior és utilitzar sempre les mateixes variables (<code>String imatge</code>, <code>String nom</code>, <strong><code>int </code></strong><code>oferta</code>) i anar canviant el seu valor al llarg del programa (<code>cam</code>, <code>console</code>, <code>laptop</code>, <code>pendrive</code>, ...).</p>
+<p>Fixa&#39;t que el que estem fent al codi anterior és utilitzar sempre les mateixes variables (<code>String imatge</code>, <code>String nom</code>, <code>int oferta</code>) i anar canviant el seu valor al llarg del programa (<code>cam</code>, <code>console</code>, <code>laptop</code>, <code>pendrive</code>, ...).</p>
 <p>És a dir, cadascuna d&#39;aquestes variables, per exemple la variable <code>imatge</code>, només té un valor en un moment donat, i el que anem fent és canviar aquest valor a mesura que avança el programa. Simplificant el codi, podem veure aquest patró:</p>
 <p class="image-container"><img style="width: 484.75px" src="img\1bbdeb97df5613f4.png"></p>
 
@@ -267,7 +270,74 @@
        }
    }
 }</code></pre>
-<p>El resultat és el mateix que el que havíem aconseguit abans, però ara el codi és més breu i ens permet modificacions més ràpidament</p>
+<p>El resultat és el mateix que el que havíem aconseguit abans, però ara el codi és més breu i ens permet modificacions més ràpidament.</p>
+<p>És a dir si ara volem afegir la resta de productes, només cal afegir els seus valors als arrays, i d&#39;aquesta forma el loop anirà agafant tots aquests valors automàticament. </p>
+<pre><code>String[] imatges = {&#34;cam&#34;, &#34;console&#34;, &#34;laptop&#34;, &#34;pendrive&#34;, &#34;cpu&#34;, &#34;hdd&#34;, &#34;printer&#34;, &#34;sdcard&#34;};
+String[] noms = {&#34;Càmeres&#34;, &#34;Consoles&#34;, &#34;Portàtils&#34;, &#34;Pendrives&#34;, &#34;CPUS&#34;, &#34;Discs durs&#34;, &#34;Impressores&#34;, &#34;Tarjes SD&#34;};
+int[] ofertes = {10, 15, 30, 5, 20, 25, 35, 50};</code></pre>
+<p>Només caldrà canviar el valor fins al qual ha d&#39;arribar la variable <code>i</code>. Els valor de la variable <code>i</code> hauran de recòrrer tots els elements de l&#39;array. Com als arrays hi ha <code>8</code> elements, la variable <code>i</code> haurà d&#39;anar des del valor <code>0</code> al valor <code>7</code>.</p>
+<pre><code>for (int i = 0; i &lt; 8; i++) {
+  
+}</code></pre>
+<p class="image-container"><img style="width: 736.40px" src="img\ac3eb35f9a2bdfa9.png"></p>
+<p>És molt comú realitzar aquest recorregut per els elements d&#39;un array fent que la variable <code>i</code> del <em>loop </em>vagi des de <code>0</code> fins a <code>ú menys que el nombre d&#39;elemen</code>ts, i utilitzant aquesta variable per a indicar quin valor de l&#39;array s&#39;agafa en cada iteració del loop.</p>
+<p>Aquest <code>8</code> que veiem en el <code>for</code> sempre serà el nombre d&#39;elements que tinguem a l&#39;array, i la variable <code>i</code> sempre anirà desde <code>0</code> (<em>la posició del primer element</em>) fins a <code>ú menys que el nombre d&#39;elemen</code>ts (la posició de l&#39;últim element, <code>7</code> en aquest cas).</p>
+<p>Podem substituir el nombre <code>8</code> per la variable <code>imatges.length</code> que ens diu, precisament, el nombre d&#39;elements de l&#39;array.</p>
+<p>Finalment el codi queda així:</p>
+<pre><code>public class Main {
+
+   public static void main(String[] args) {
+       String[] imatges = {&#34;cam&#34;, &#34;console&#34;, &#34;laptop&#34;, &#34;pendrive&#34;, &#34;cpu&#34;, &#34;hdd&#34;, &#34;printer&#34;, &#34;sdcard&#34;};
+      String[] noms = {&#34;Càmeres&#34;, &#34;Consoles&#34;, &#34;Portàtils&#34;, &#34;Pendrives&#34;, &#34;CPUS&#34;, &#34;Discs durs&#34;, &#34;Impressores&#34;, &#34;Tarjes SD&#34;};
+      int[] ofertes = {10, 15, 30, 5, 20, 25, 35, 50};
+
+       for (int i = 0; i &lt; imatges.length; i++) {
+           System.out.println(&#34;&lt;svg width=\&#34;300\&#34; height=\&#34;100\&#34;&gt;\n&#34; +
+                   &#34;  &lt;g&gt;\n&#34; +
+                   &#34;    &lt;image href=\&#34;file:///C:/Users/gerard/IdeaProjects/AddGenerator/&#34; + imatges[i] + &#34;.jpg\&#34; height=\&#34;100\&#34; width=\&#34;100\&#34; /&gt;\n&#34; +
+                   &#34;    &lt;text style=\&#34;font-size:14px;fill:#000000;font-family:arial\&#34;&gt;\n&#34; +
+                   &#34;      &lt;tspan x=\&#34;90\&#34; y=\&#34;20\&#34;&gt;botigainformatica.com&lt;/tspan&gt;&lt;/text&gt;\n&#34; +
+                   &#34;    &lt;text style=\&#34;font-size:36px;fill:#000000;font-family:arial\&#34;&gt;\n&#34; +
+                   &#34;      &lt;tspan x=\&#34;90\&#34; y=\&#34;60\&#34;&gt;&#34; + noms[i] + &#34;&lt;/tspan&gt;&lt;/text&gt;\n&#34; +
+                   &#34;    &lt;rect style=\&#34;fill:#ff0000;\&#34; width=\&#34;160\&#34; height=\&#34;30\&#34; x=\&#34;70\&#34; y=\&#34;220\&#34; transform=\&#34;matrix(0.7,-0.7,0.7,0.7,0,0)\&#34; /&gt;\n&#34; +
+                   &#34;    &lt;text style=\&#34;font-size:28px;fill:#ffffff;font-family:arial\&#34; transform=\&#34;matrix(0.7,-0.7,0.7,0.7,0,0)\&#34;&gt;\n&#34; +
+                   &#34;      &lt;tspan x=\&#34;115\&#34; y=\&#34;245\&#34;&gt;&#34; + ofertes[i] + &#34;%&lt;/tspan&gt;&lt;/text&gt;\n&#34; +
+                   &#34;  &lt;/g&gt;\n&#34; +
+                   &#34;&lt;/svg&gt;\n&#34;);
+       }
+   }
+}</code></pre>
+<p>I d&#39;aquesta forma generem d&#39;una sola execució totes les posibles imatges per a la campanya d&#39;anuncis online:</p>
+<p class="image-container"><img style="width: 736.40px" src="img\a63e7dd9952c4457.png"></p>
+<p>Aquesta forma d&#39;automatitzar el recorregut per els valors dels arrays utilitzant <em>loops</em>, ens permet una gran versatilitat a l&#39;hora d&#39;adaptar el nostre codi a noves situacions.</p>
+<p>Per exemple, imagina que ara volem provar diversos colors per a l&#39;oferta per tal d&#39;anar provant-los amb la finalitat de veure quin color és el que més atrau als nostres clients:</p>
+<pre><code>public class Main {
+
+   public static void main(String[] args) {
+       String[] colors = {&#34;#ff0000&#34;,&#34;#00ff00&#34;,&#34;#0000ff&#34;,&#34;#ffff00&#34;,&#34;#ff00ff&#34;,&#34;#00ffff&#34;};
+       String[] imatges = {&#34;cam&#34;, &#34;console&#34;, &#34;laptop&#34;, &#34;pendrive&#34;, &#34;cpu&#34;, &#34;hdd&#34;, &#34;printer&#34;, &#34;sdcard&#34;};
+      String[] noms = {&#34;Càmeres&#34;, &#34;Consoles&#34;, &#34;Portàtils&#34;, &#34;Pendrives&#34;, &#34;CPUS&#34;, &#34;Discs durs&#34;, &#34;Impressores&#34;, &#34;Tarjes SD&#34;};
+      int[] ofertes = {10, 15, 30, 5, 20, 25, 35, 50};
+
+       for (int j = 0; j &lt; colors.length; j++) {
+           for (int i = 0; i &lt; imatges.length; i++) {
+               System.out.println(&#34;&lt;svg width=\&#34;300\&#34; height=\&#34;100\&#34;&gt;\n&#34; +
+                       &#34;  &lt;g&gt;\n&#34; +
+                       &#34;    &lt;image href=\&#34;file:///C:/Users/gerard/IdeaProjects/AddGenerator/&#34; + imatges[i] + &#34;.jpg\&#34; height=\&#34;100\&#34; width=\&#34;100\&#34; /&gt;\n&#34; +
+                       &#34;    &lt;text style=\&#34;font-size:14px;fill:#000000;font-family:arial\&#34;&gt;\n&#34; +
+                       &#34;      &lt;tspan x=\&#34;90\&#34; y=\&#34;20\&#34;&gt;botigainformatica.com&lt;/tspan&gt;&lt;/text&gt;\n&#34; +
+                       &#34;    &lt;text style=\&#34;font-size:36px;fill:#000000;font-family:arial\&#34;&gt;\n&#34; +
+                       &#34;      &lt;tspan x=\&#34;90\&#34; y=\&#34;60\&#34;&gt;&#34; + noms[i] + &#34;&lt;/tspan&gt;&lt;/text&gt;\n&#34; +
+                       &#34;    &lt;rect style=\&#34;fill:&#34;+ colors[j] + &#34;;\&#34; width=\&#34;160\&#34; height=\&#34;30\&#34; x=\&#34;70\&#34; y=\&#34;220\&#34; transform=\&#34;matrix(0.7,-0.7,0.7,0.7,0,0)\&#34; /&gt;\n&#34; +
+                       &#34;    &lt;text style=\&#34;font-size:28px;fill:#ffffff;font-family:arial\&#34; transform=\&#34;matrix(0.7,-0.7,0.7,0.7,0,0)\&#34;&gt;\n&#34; +
+                       &#34;      &lt;tspan x=\&#34;115\&#34; y=\&#34;245\&#34;&gt;&#34; + ofertes[i] + &#34;%&lt;/tspan&gt;&lt;/text&gt;\n&#34; +
+                       &#34;  &lt;/g&gt;\n&#34; +
+                       &#34;&lt;/svg&gt;\n&#34;);
+           }
+       }
+   }
+}</code></pre>
+<p class="image-container"><img style="width: 736.40px" src="img\f0de84962767cb6c.png"></p>
 
 
       </google-codelab-step>
