--- a/mp03/codelab10/index.html
+++ b/mp03/codelab10/index.html
@@ -337,6 +337,7 @@ int[] ofertes = {10, 15, 30, 5, 20, 25, 35, 50};</code></pre>
        }
    }
 }</code></pre>
+<p>Només afegint els possibles colors en un array, i fent un loop sobre els valors d&#39;aquest array, aconseguim generar tots els possibles anuncis. Només amb dues línies de codi. Torna enrere i pensa quantes línies de codi hauríem necessitat per a generar tots aquests anuncis sense utilitzar <strong>arrays</strong> i <strong>loops</strong>...</p>
 <p class="image-container"><img style="width: 736.40px" src="img\f0de84962767cb6c.png"></p>
 
 
