--- a/mp08/p1/index.html
+++ b/mp08/p1/index.html
@@ -48,33 +48,46 @@
 </ol>
 <ul>
 <li>Si todavía no has abierto un proyecto, en la pantalla de <strong>bienvenida</strong>, haz clic en <strong><code>Nuevo proyecto</code></strong>.<br><img style="width: 472.00px" src="img\d7307cb403fa7e96.png"></li>
-<li>Si has abierto un proyecto, ve a <strong><code>File</code></strong><code> </code>&gt; <strong><code>New</code></strong> &gt; <strong><code>New project</code></strong>.<br></li>
+<li>Si has abierto un proyecto, ve a <strong><code>File</code></strong> &gt; <strong><code>New</code></strong> &gt; <strong><code>New project</code></strong>.<br></li>
 </ul>
 <ol type="1" start="2">
-<li>Elije la plantilla para la <code>Activity</code> (Pantalla), principal de la App. Para esta práctica elije &#34;<strong>Empty Activity</strong>&#34;.</li>
+<li>Elije la plantilla para la <code>Activity</code> (pantalla) principal de la App. Para esta práctica elije &#34;<strong>Empty Activity</strong>&#34;.</li>
 </ol>
 <p class="image-container"><img style="width: 478.00px" src="img\680d317d4a48fd37.png"></p>
 <ol type="1" start="3">
 <li>Rellena los campos de la pantalla.</li>
 </ol>
 <ul>
-<li><strong>Nombre de la aplicación</strong> es el nombre de la aplicación que aparece a los usuarios.</li>
-<li><strong>Nombre del paquete</strong> es el nombre completo para el proyecto (siguiendo las mismas reglas que las de denominación de paquetes en el lenguaje de programación Java). Su nombre del paquete debe ser único en todos los paquetes instalados en el sistema Android.</li>
-<li><strong>Ubicación del proyecto</strong> es el directorio en el sistema que contiene los archivos del proyecto.</li>
+<li><strong>Nombre de la aplicación:</strong> es el nombre de la aplicación que aparece a los usuarios.</li>
+<li><strong>Nombre del paquete:</strong> es el nombre completo para el proyecto (siguiendo las mismas reglas que las de denominación de paquetes en el lenguaje de programación Java). Su nombre del paquete debe ser único en todos los paquetes instalados en el sistema Android.</li>
+<li><strong>Ubicación del proyecto:</strong> es el directorio en el sistema que contiene los archivos del proyecto.</li>
 <li><strong>Lenguaje</strong>: Java o Kotlin</li>
-<li><strong>API Level</strong>: El SDK Obligatorio mínimo es la primera versión de Android que su aplicacion soporta, y se indica usando el <a href="https://developer.android.com/guide/topics/manifest/uses-sdk-element.html#ApiLevels" target="_blank">API level</a> . Para soportar el máximo de dispositivos que sea posible, debe establecer el API level a la versión más baja disponible que permita a la aplicación proveerse del conjunto de características del núcleo que necesite. Si alguna de las funciones de su aplicación sólo es posible en las versiones más recientes de Android y no es crítica para el conjunto de características del núcleo de la aplicación, se puede habilitar la función sólo cuando se ejecuta en las versiones que lo soportan (Vea: <a href="https://developer.android.com/training/basics/supporting-devices/platforms.html" target="_blank">soporte a diferentes versiones de la plataforma</a> ).</li>
-<li><strong>Instant apps</strong>: Déjelo desmarcado (Vea: <a href="https://developer.android.com/topic/google-play-instant" target="_blank">https://developer.android.com/topic/google-play-instant</a>).</li>
-<li>Androidx: marque esta opción (Vea: <a href="https://developer.android.com/jetpack/androidx" target="_blank">https://developer.android.com/jetpack/androidx</a>).</li>
+<li><strong>API Level</strong>: el SDK Obligatorio mínimo es la primera versión de Android que su aplicacion soporta, y se indica usando el <a href="https://developer.android.com/guide/topics/manifest/uses-sdk-element.html#ApiLevels" target="_blank">API level</a> . Para soportar el máximo de dispositivos que sea posible, debe establecer el API level a la versión más baja disponible que permita a la aplicación proveerse del conjunto de características del núcleo que necesite. Si alguna de las funciones de su aplicación sólo es posible en las versiones más recientes de Android y no es crítica para el conjunto de características del núcleo de la aplicación, se puede habilitar la función sólo cuando se ejecuta en las versiones que lo soportan (+info: <a href="https://developer.android.com/training/basics/supporting-devices/platforms.html" target="_blank">soporte a diferentes versiones de la plataforma</a> ).</li>
+<li><strong>Instant apps</strong>: déjalo desmarcado (+info: <a href="https://developer.android.com/topic/google-play-instant" target="_blank">https://developer.android.com/topic/google-play-instant</a>).</li>
+<li><strong>Androidx</strong>: marca esta opción (+info: <a href="https://developer.android.com/jetpack/androidx" target="_blank">https://developer.android.com/jetpack/androidx</a>).</li>
 </ul>
-<p>Su proyecto Android es una aplicación básica de &#34;Hello World&#34; que contiene algunos <strong>archivos por defecto</strong>. Veamos los más importantes:</p>
+
+
+      </google-codelab-step>
+    
+      <google-codelab-step label="Estructura del proyecto" duration="0">
+        <p>Tu proyecto Android es una aplicación básica de &#34;Hello World&#34; que contiene algunos <strong>archivos por defecto</strong>. Veamos los más importantes:</p>
 <p class="image-container"><img style="width: 332.00px" src="img\af72340f862576f2.png"></p>
-<p><code>app/src/main/AndroidManifest.xml</code></p>
+<ul>
+<li><code>app/src/main/AndroidManifest.xml</code></li>
+</ul>
 <p>El <a href="https://developer.android.com/guide/topics/manifest/manifest-intro.html" target="_blank">archivo de manifiesto</a> describe las características fundamentales de la aplicación y define cada uno de sus componentes. Aquí especificaremos las Activities que tiene nuestra app y los permisos que requiere (Cámara, Contactos, Internet, etc.)</p>
-<p><code>app/src/main/java/com.example.helloworld/MainActivity.java</code></p>
+<ul>
+<li><code>app/src/main/java/com.example.helloworld/MainActivity.java</code></li>
+</ul>
 <p>Contiene la definición de clase para la <strong>Activity</strong> (pantalla) principal. En este fichero programaremos el comportamiento de esta Activity.</p>
-<p><code>app/src/main/res/layout/activity_main.xml</code></p>
+<ul>
+<li><code>app/src/main/res/layout/activity_main.xml</code></li>
+</ul>
 <p>Este archivo XML define el <em>layout </em>de la actividad, es decir los elementos (widgets) que tiene la pantalla. Por defecto, contiene un elemento <code>TextView</code> con el texto &#34;¡Hola mundo!&#34;.</p>
-<p><code>app/build.gradle</code></p>
+<ul>
+<li><code>app/build.gradle</code></li>
+</ul>
 <p>Android Studio utiliza Gradle para compilar y construir la aplicación. Hay un archivo  <code>build.gradle</code> para cada módulo del proyecto, así como un archivo <code>build.gradle</code> de todo el proyecto. Por lo general, sólo estaremos interesados en el archivo <code>build.gradle</code> para el módulo, en este caso el <code>app</code> o módulo de aplicación. Aquí es donde se encuentran las dependencias de construcción de la aplicación, incluyendo los ajustes <code>defaultConfig</code>:</p>
 <ul>
 <li><code>compiledSdkVersion</code> es la versión de la plataforma con la que va a compilar su aplicación. Por defecto, se establece en la última versión del SDK instalado en el ordenador.<br></li>
@@ -84,17 +97,25 @@
 </ul>
 <p>Más adelante usaremos este fichero para instalar nuevas bibliotecas y componentes para nuestra App, en el apartado <code>dependencies</code>.</p>
 <p>Veamos también los subdirectorios <code>/res</code> que contienen los <a href="https://developer.android.com/guide/topics/resources/overview.html" target="_blank">recursos</a> para su aplicación:</p>
-<p><code>drawable/</code></p>
+<ul>
+<li><code>drawable/</code></li>
+</ul>
 <p>Directorio de imágenes.</p>
-<p><code>layout/</code></p>
+<ul>
+<li><code>layout/</code></li>
+</ul>
 <p>Directorio para los archivos que definen la interfaz de usuario de la aplicación, como <code>activity_main.xml</code>, que describe un diseño básico para la <code>MainActivity</code>.</p>
-<p><code>mipmap/</code></p>
+<ul>
+<li><code>mipmap/</code></li>
+</ul>
 <p>Contiene los iconos Lanzadores.</p>
-<p><code>values/</code></p>
+<ul>
+<li><code>values/</code></li>
+</ul>
 <p>Directorio para otros archivos XML que contienen una colección de recursos.</p>
-<p>En el archivo colors.xml definiremos los colores de la app. </p>
-<p>En el archivo strings.xml definiremos todos los textos que se muestren en nuestra app.</p>
-<p>En el archivo styles.xml definiremos el tema de nuestra app.</p>
+<p>En el archivo <code>colors.xml</code> definiremos los colores de la app. </p>
+<p>En el archivo <code>strings.xml</code> definiremos todos los textos que se muestren en nuestra app.</p>
+<p>En el archivo <code>styles.xml</code> definiremos el tema de nuestra app.</p>
 
 
       </google-codelab-step>
