--- a/mp08/p1/index.html
+++ b/mp08/p1/index.html
@@ -75,16 +75,16 @@
 <p class="image-container"><img style="width: 332.00px" src="img\af72340f862576f2.png"></p>
 <table>
 <tr></tr>
-<tr><td colspan="1" rowspan="1"><p><code>app/src/main/AndroidManifest.xml</code></p>
+<tr><td colspan="1" rowspan="1"><p><strong><code>app/src/main/AndroidManifest.xml</code></strong></p>
 <p>El <a href="https://developer.android.com/guide/topics/manifest/manifest-intro.html" target="_blank">archivo de manifiesto</a> describe las características fundamentales de la aplicación y define cada uno de sus componentes. Aquí especificaremos las Activities que tiene nuestra app y los permisos que requiere (Cámara, Contactos, Internet, etc.)</p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>app/src/main/java/com.example.helloworld/MainActivity.java</code></p>
+<tr><td colspan="1" rowspan="1"><p><strong><code>app/src/main/java/com.example.helloworld/MainActivity.java</code></strong></p>
 <p>Contiene la definición de clase para la <strong>Activity</strong> (pantalla) principal. En este fichero programaremos el comportamiento de esta Activity.</p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>app/src/main/res/layout/activity_main.xml</code></p>
+<tr><td colspan="1" rowspan="1"><p><strong><code>app/src/main/res/layout/activity_main.xml</code></strong></p>
 <p>Este archivo XML define el <em>layout </em>de la actividad, es decir los elementos (widgets) que tiene la pantalla. Por defecto, contiene un elemento <code>TextView</code> con el texto &#34;¡Hola mundo!&#34;.</p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p><code>app/build.gradle</code></p>
+<tr><td colspan="1" rowspan="1"><p><strong><code>app/build.gradle</code></strong></p>
 <p>Android Studio utiliza Gradle para compilar y construir la aplicación. Hay un archivo  <code>build.gradle</code> para cada módulo del proyecto, así como un archivo <code>build.gradle</code> de todo el proyecto. Por lo general, sólo estaremos interesados en el archivo <code>build.gradle</code> para el módulo, en este caso el <code>app</code> o módulo de aplicación. Aquí es donde se encuentran las dependencias de construcción de la aplicación, incluyendo los ajustes <code>defaultConfig</code>:</p>
 <ul>
 <li><code>compiledSdkVersion</code> es la versión de la plataforma con la que va a compilar su aplicación. Por defecto, se establece en la última versión del SDK instalado en el ordenador.<br></li>
@@ -94,14 +94,14 @@
 </ul>
 <p>Más adelante usaremos este fichero para instalar nuevas bibliotecas y componentes para nuestra App, en el apartado <code>dependencies</code>.</p>
 </td></tr>
-<tr><td colspan="1" rowspan="1"><p>Veamos también los subdirectorios <code>/res</code> que contienen los <a href="https://developer.android.com/guide/topics/resources/overview.html" target="_blank">recursos</a> para su aplicación:</p>
-<p><code>drawable/</code></p>
+<tr><td colspan="1" rowspan="1"><p>Veamos también los subdirectorios <strong><code>/res</code></strong> que contienen los <a href="https://developer.android.com/guide/topics/resources/overview.html" target="_blank">recursos</a> para su aplicación:</p>
+<p><strong><code>drawable/</code></strong></p>
 <p>Directorio de imágenes.</p>
-<p><code>layout/</code></p>
+<p><strong><code>layout/</code></strong></p>
 <p>Directorio para los archivos que definen la interfaz de usuario de la aplicación, como <code>activity_main.xml</code>, que describe un diseño básico para la <code>MainActivity</code>.</p>
-<p><code>mipmap/</code></p>
+<p><strong><code>mipmap/</code></strong></p>
 <p>Contiene los iconos Lanzadores.</p>
-<p><code>values/</code></p>
+<p><strong><code>values/</code></strong></p>
 <p>Directorio para otros archivos XML que contienen una colección de recursos.</p>
 <p>En el archivo <code>colors.xml</code> definiremos los colores de la app. </p>
 <p>En el archivo <code>strings.xml</code> definiremos todos los textos que se muestren en nuestra app.</p>
