--- a/mp08/p1/index.html
+++ b/mp08/p1/index.html
@@ -25,7 +25,7 @@
                   id="mp08/p1"
                   title="P1 Android Studio"
                   environment="web"
-                  feedback-link="https://github.com/gerardfp/MP08">
+                  feedback-link="https://github.com/gerardfp/">
     
       <google-codelab-step label="Introducción" duration="0">
         <p class="image-container"><img style="width: 430.00px" src="img\f1ae16904720fc7b.png"></p>
