--- a/mp08/p1/index.html
+++ b/mp08/p1/index.html
@@ -119,7 +119,7 @@
 <li>Conectar el dispositivo a su equipo de desarrollo con un cable USB.<br></li>
 <li>Habilitar <strong>la depuración USB</strong> en el dispositivo móvil, yendo a <strong><code>Ajustes</code></strong><strong> &gt; </strong><strong><code>Opciones de desarrollador</code></strong> .</li>
 </ol>
-<aside class="warning"><p> Nota: En Android 4.2 y versiones posteriores, <strong>Opciones de desarrollador</strong> se oculta de forma predeterminada. Para que esté disponible, ve a <strong><code>Ajustes</code></strong><strong> &gt; </strong><strong><code>Acerca del teléfon</code></strong>o y toca <strong>el número de compilación </strong>SIETE veces. Regresa a la pantalla anterior y encontrará las <strong>Opciones de desarrollador</strong>.</p>
+<aside class="warning"><p> Nota: En Android 4.2 y versiones posteriores, <strong>Opciones de desarrollador</strong> se oculta de forma predeterminada. Para que esté disponible, ve a <strong><code>Ajustes</code></strong><strong> &gt; </strong><strong><code>Acerca del teléfono</code></strong><code> </code>y toca <strong>el número de compilación </strong>SIETE veces. Regresa a la pantalla anterior y encontrará las <strong>Opciones de desarrollador</strong>.</p>
 </aside>
 <p>Ejecutar la aplicación desde Android Studio de la siguiente manera:</p>
 <ol type="1" start="1">
